--- a/index.html
+++ b/index.html
@@ -36,14 +36,22 @@
   <header>
     <nav class="navbar">
       <ul>
-        <li><a href="#">list cat</a></li>
-        <li><a href="#">create cat</a></li>
+        <li><a href="#"></a>list cat</a></li>
+        <li><a href="#"></a>create cat</a></li>
+        <li><a href="#"></a>home</a></li>
         <div class="search">
             <input type="text" name="search" id="search">
       </ui>
  </header>
 </body>
-  </h1>"welcome to cat tracker"</h1>
+  <h1 class="centre-align">welcome to cat tracker"</h1>
+  <div="main"</div>
+  <div class="container" id="main">
+    <div class="collection">
+      <a href="#!" class="collection-item">medical short</a>
+      <a href="#!" class="collection-item active">track grooming</a>
+      <a href="#!" class="collection-item">baths</a>
+    </div>
   </div>
   <scripts src="javascripts/index.js"></scripts>
 </body>
