--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </ui>
  </header>
 </body>
-  <h1 class="centre-align">welcome to cat tracker"</h1>
+  <h1 class="centre-align">"welcome to cat tracker"</h1>
   <div="main"</div>
   <div class="container" id="main">
     <div class="collection">
