--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge
-  <meta name= "viewport" content="width=device-width, initial-scale=1.0">
+  <meta name= "viewport" content ="width=device-width,initial-scale=1.0">
   <!-- complied and minified css-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/lib ss">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -31,29 +31,23 @@
           border-color: white;
       }
   </style>
+ </head>
+ <body>
+   <header>
+     <nav class="navbar">
+       <ul>
+         <li><a href="#">list cat</a></li>
+         <li><a href="#">create cat</a></li>
+         <div class="search">
+             <input type="text" name="search" id="search">
+       </ui>
 </head>
-<body>
-  <header>
-    <nav class="navbar">
-      <ul>
-        <li><a href="#"></a>list cat</a></li>
-        <li><a href="#"></a>create cat</a></li>
-        <li><a href="#"></a>home</a></li>
-        <div class="search">
-            <input type="text" name="search" id="search">
-      </ui>
- </header>
 </body>
-  <h1 class="centre-align">"welcome to cat tracker"</h1>
-  <div="main"</div>
-  <div class="container" id="main">
-    <div class="collection">
-      <a href="#!" class="collection-item">medical short</a>
-      <a href="#!" class="collection-item active">track grooming</a>
-      <a href="#!" class="collection-item">baths</a>
+</header>
+  <h1>CAT TRACKER APP</h1>
+    <div id="catContainer">
+      <button id="like" >Like</button>
     </div>
-  </div>
-  <scripts src="javascripts/index.js"></scripts>
+  <script src="./index.js"></script>
 </body>
-
 </html>
