--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
  <body>
    <header>
      <nav class="navbar">
+      <h1>CAT TRACKER APP</h1>
        <ul>
+         <li><a href="#">home</a></li>
          <li><a href="#">list cat</a></li>
          <li><a href="#">create cat</a></li>
          <div class="search">
