--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
      <nav class="navbar">
       <h1>CAT TRACKER APP</h1>
        <ul>
-         <li><a href="#">home</a></li>
          <li><a href="#">list cat</a></li>
          <li><a href="#">create cat</a></li>
-         <div class="search">
+         <li><a href="#">home</a></li>
+         <ul class="search">
              <input type="text" name="search" id="search">
-       </ui>
+         </ul>
  </header>
  <form id="cat form">
   <level for="Name">Name</level>
@@ -54,9 +54,9 @@
   <button type="submit">submit</button> 
  </form>
  <h1>CAT TRACKER APP</h1><button id="download"
-image src='https://api.thecatapi.com/v1/images/search?limit=10'
-div class="content"
-      class id="like" >Like</button>
+ image src="https://api.thecatapi.com/v1/images/search?limit=10"
+ div class="content"
+      class id="like" >Like</>
     </div>
   <script src="./index.js"></script>
 </body>
