--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
  <h1>CAT TRACKER APP</h1><button id="download"
  image src="https://api.thecatapi.com/v1/images/search?limit=10"
  div class="content"
-      class id="like" >Like</>
+      class id="like" ><Like>
     </div>
   <script src="./index.js"></script>
 </body>
