--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <!-- complied and minified css-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/lib ss">
@@ -33,31 +33,27 @@
   </style>
  </head>
  <body>
-   <header>
-     <nav class="navbar">
-      <h1>CAT TRACKER APP</h1>
-       <ul>
+  <header>
          <li><a href="#">list cat</a></li>
          <li><a href="#">create cat</a></li>
          <li><a href="#">home</a></li>
          <ul class="search">
-             <input type="text" name="search" id="search">
-         </ul>
+         <input type="text" name="search" id="search">
+        </ul>
  </header>
  <form id="cat form">
-  <level for="Name">Name</level>
-  <input type="text"id Name="Name"name/>
-  <level for="Name">Image url</level>
-  <input type="text"id="Image_url"name= image_url/>
-  <level for="Description">Description</level>
-  <textarea area id="description"Name description></textarea>
-  <button type="submit">submit</button> 
+   <level for="Name">Name</level>
+   <input type="text"id Name="Name"name/>
+   <level for="Name">Image url</level>
+   <input type="text"id="Image_url"name= image_url/>
+   <level for="Description">Description</level>
+   <textarea area id="description"Name description></textarea>
+   <button type="submit">submit</button> 
  </form>
- <h1>CAT TRACKER APP</h1><button id="download"
- image src="https://api.thecatapi.com/v1/images/search?limit=10"
- div class="content"
+ <h2>CAT TRACKER APP</h2>
+ <image src="https://api.thecatapi.com/v1/images/search?limit=10"
+ div class="container"
       class id="like" ><Like>
-    </div>
-  <script src="./index.js"></script>
+</div>
 </body>
 </html>
