--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       .navbar li{
           float:right;
           list-style:none;
-          margin: 13px 20px;
+          margin: 25px 30px;
       }
       .navbar li a{
           padding: 3px 3px;
@@ -32,15 +32,18 @@
       }
   </style>
  </head>
- <body>
+  <body>
   <header>
+    <nav class="navbar">
+         <ul>
+          <h1>CAT TRACKER APP</h1>
          <li><a href="#">list cat</a></li>
          <li><a href="#">create cat</a></li>
          <li><a href="#">home</a></li>
          <ul class="search">
          <input type="text" name="search" id="search">
         </ul>
- </header>
+  </header>
  <form id="cat form">
    <level for="Name">Name</level>
    <input type="text"id Name="Name"name/>
@@ -50,10 +53,11 @@
    <textarea area id="description"Name description></textarea>
    <button type="submit">submit</button> 
  </form>
- <h2>CAT TRACKER APP</h2>
- <image src="https://api.thecatapi.com/v1/images/search?limit=10"
- div class="container"
-      class id="like" ><Like>
-</div>
+ <h1>CAT TRACKER APP</h1>
+ <images src="https://cdn2.thecatapi.com/images/DYOqsRy9f.jpg"></images>
+   <div id="catContainer">
+     <button id="like" >Like</button>
+   </div>
+ <script src="./index.js"></script>
 </body>
 </html>
