--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+s<!DOCTYPE html>
 <html lang="en">
   <head>
   <meta charset="UTF-8">
@@ -6,11 +6,10 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <!-- complied and minified css-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/lib ss">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons rel=" stylesheet>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
   <!-- Compiled and minified JavaScript -->
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <title>cat tracker</title>
   <style>
@@ -42,7 +41,7 @@
    <button type="submit">submit</button> 
   </form>
   <h1>CAT TRACKER APP</h1>
-  <img src="https://cdn2.thecatapi.com/images/DYOqsRy9f.jpg">
+  <img src="https://cdn2.thecatapi.com/images/LSaDk6OjY.jpg">
    <div id="catContainer">
     <button id="like" >Like</button>
   </div>
