--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@ s<!DOCTYPE html>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <!-- complied and minified css-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/lib ss">
+  <link type="text/css" rel="stylesheet" href="./Content/bootstrap.min.css" />
+  <link type="text/css" rel="stylesheet" href="./Content/style.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons rel=" stylesheet>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
@@ -43,7 +44,7 @@ s<!DOCTYPE html>
   <h1>CAT TRACKER APP</h1>
   <img src="https://cdn2.thecatapi.com/images/LSaDk6OjY.jpg">
    <div id="catContainer">
-    <button id="like" >Like</button>
+    <button id="like"></button>Like</button>
   </div>
  <script src="./index.js"></script>
 </body>
