--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@ s<!DOCTYPE html>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <!-- complied and minified css-->
-  <link type="text/css" rel="stylesheet" href="./Content/style.css" />
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons rel=" stylesheet>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/lib ss">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  
   <title>cat tracker</title>
   <style>
       .navbar{
@@ -43,7 +44,8 @@ s<!DOCTYPE html>
   <h1>CAT TRACKER APP</h1>
   <img src="https://cdn2.thecatapi.com/images/LSaDk6OjY.jpg">
    <div id="catContainer">
-    <button id="like"></button>Like</button>
- <script src="./index.js"></script>
+    <button id="like" >Like</button>
+  </div>
+  <scripts src="javascripts/index.js"></scripts>
 </body>
 </html>  
