--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@ s<!DOCTYPE html>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <!-- complied and minified css-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/lib ss">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  
+            
+
   <title>cat tracker</title>
   <style>
       .navbar{
@@ -46,6 +48,6 @@ s<!DOCTYPE html>
    <div id="catContainer">
     <button id="like" >Like</button>
   </div>
-  <scripts src="javascripts/index.js"></scripts>
+  <scripts src="javascripts/index.js"></s>
 </body>
 </html>  
