--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ s<!DOCTYPE html>
     <button type="submit">submit</button> 
   </form>
   <h1>CAT TRACKER APP</h1>
-  <img src="https://cdn2.thecatapi.com/images/LSaDk6OjY.jpg">
+  <img src="https://api.thecatapi.com/v1/images/search?limit=10">
    <div id="catContainer">
     <button id="like" >Like</button>
   </div>
