--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ s<!DOCTYPE html>
     <input type="text"id Name="Name"name/>
     <level for="Name">Image url</level>
     <input type="text"id="Image_url"name= image_url/>
-    <button type="submit">submit</button> 
+    <button id ="submitButton" type="submit">submit</button> 
   </form>
   <h1>CAT TRACKER APP</h1>
   <img src="https://api.thecatapi.com/v1/images/search?limit=10">
